--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -33,7 +33,7 @@
         top: 5rem;
         left: 9rem;
         background-image: radial-gradient($color-primary-60, $color-primary);
-        z-index: 999;
+        z-index: 1400;
         transition: transform .8s;
     }
 
